<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailsFragment">

    <data>

        <variable
            name="viewModel"
            type="com.basemibrahim.nyt_top_stories.viewmodel.MainViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline3"
                app:riv_corner_radius="20dip"
                tools:src="@tools:sample/backgrounds/scenic" />


            <TextView
                android:id="@+id/titleTitle"
                style="@style/DetailsTitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image" />

            <TextView
                android:id="@+id/titleTxt"
                style="@style/DetailsbodyTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:paddingTop="2dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/titleTitle"
                app:layout_constraintTop_toTopOf="@id/titleTitle"
                tools:text="Title" />

            <TextView
                android:id="@+id/publishedByTitle"
                style="@style/DetailsTitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/published_by"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleTxt" />

            <TextView
                android:id="@+id/publishedByTxt"
                style="@style/DetailsbodyTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:paddingTop="2dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/publishedByTitle"
                app:layout_constraintTop_toTopOf="@id/publishedByTitle"
                tools:text="Title" />

            <TextView
                android:id="@+id/SectionTitle"
                style="@style/DetailsTitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/section"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/publishedByTxt" />

            <TextView
                android:id="@+id/sectionTxt"
                style="@style/DetailsbodyTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:paddingTop="2dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/SectionTitle"
                app:layout_constraintTop_toTopOf="@id/SectionTitle"
                tools:text="Title" />

            <TextView
                android:id="@+id/SummaryTitle"
                style="@style/DetailsTitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/summary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sectionTxt" />

            <TextView
                android:id="@+id/summaryTxt"
                style="@style/DetailsbodyTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:paddingTop="2dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/SummaryTitle"
                app:layout_constraintTop_toTopOf="@id/SummaryTitle"
                tools:text="Title" />

            <TextView
                android:id="@+id/DateTitle"
                style="@style/DetailsTitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/summaryTxt" />

            <TextView
                android:id="@+id/DateTxt"
                style="@style/DetailsbodyTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:paddingTop="2dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/DateTitle"
                app:layout_constraintTop_toTopOf="@id/DateTitle"
                tools:text="Title" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.08" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</layout>